samples/_failures_safe/1761213105_b13b8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_336d722a.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_336d722a.c:148:18: error: expected ‘;’ at end of input
  148 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_336d722a.c:148:13: error: expected declaration or statement at end of input
  148 |             break
      |             ^~~~~
./samples/SAFE/__tmp_336d722a.c:148:13: error: expected declaration or statement at end of input
